#39 fix carousel overflow

--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -9,7 +9,7 @@
   // }
   & > .container {
     width:100%;
-    overflow-x: hidden;
+    overflow-x: auto;
     background-color: transparent;
     box-sizing: border-box;
     // padding-left:100%;
